# elipy

./: .gitignore  LICENSE.txt  README.md  __init__.py  a2f_calculator.py  constants.py  eliashberg.py  files_handling.py  grid.py  kpt_utils.py  mpi.py  pyproject.toml  requirements.txt
core/: a2f_calculator.py  constants.py  eliashberg.py  files_handling.py  grid.py  kpt_utils.py  messages.py  mpi.py
elipy/: __init__.py
elipy/core/: a2f_calculator.py  constants.py  eliashberg.py  files_handling.py  grid.py  kpt_utils.py  messages.py
example/: README.md  epc.py
example/indata/: EIG_small.nc  anaddb_PHFRQ_small
